##### Wed 27/06/2012
* Begin to use new BOOST_FOREACH macro.
* Now unused VIdentifiers will automatically expunge itself.
* Start to use a new branch for developing and only push runnable versions to master.

##### Tue 26/06/2012
* Rename the module name in instances after the module name is re-calculated with parameters.
* Added a write command in avs_shell to write out a design.

##### Mon 25/06/2012
* Modified Makefile so there is no target test.
* Fixed a stupid misuse of reference in netlist::RangeArray::is_declaration(). Reference assign is not pointer assignment!
* Fixed some bugs in case expression check and now consider numbers with x/z as constant and valuable.

##### Fri 22/06/2012
* Fixed some bugs and tried to differentiate empty from full by forcing all maximal range expandation before range 
  operations.
* Find serious flaws in the range operation as it is difficult to differentiate empty ranges from full ranges.

##### Thu 21/06/2012
* Endless debugging for the range operation although no multi-dimension ranges are actually used in OR1200 RTL.
* Deduction of RangeArray is implemented.

##### Wed 20/06/2012 ( boring due to the routine work to rewrite inherited fuctions and parsers. )
* Imply complicated no-driver, multi-driver and no-load analysis on all veriable, although missing a deduction operation 
  on RangeArray right now.
* Provide out-of-range check to all variables.
* Modify the parser to use the new netlist::RangeArray.
* Modify the streamout facilities of netlist::Range, netlist::RangeArray and netlist::RangeArrayCommon.

##### Tue 19/06/2012 ( good! finaaly settled. and get a review request from IET CDT)
* Seems all internals of range related calsses are finished. So change other classes who use range expressions.
* Implement inherit methods in netlist::Range, netlist::RangeArray and netlist::RangeArrayCommon.

##### Mon 18/06/2012 ( better as find a way to do it )
* The major construction of range operations have been finished.