@@ -1,4 +1,5 @@
 ##### Wed 27/06/2012
+* Initialise father of netlist::ConElem to NULL (always forget this, dam!)
 * Begin to use new BOOST_FOREACH macro.
 * Now unused VIdentifiers will automatically expunge itself.
 * Start to use a new branch for developing and only push runnable versions to master.
